test/good/sets/op01.px

print {true} + {not false}
print {"a"} + {"b"} == {"a", "b"}
