test/bad/lambdas/call05.px

a = +_
b = a
a(true)
